--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 header {
 	height: 56px;
 	width: auto;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 	font-size: 56px; 
 	background-color: #4aaaa5;
 	text-align: center;
@@ -14,6 +14,7 @@ header {
 }
 
 body {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	width: 580px;
 	background: white;
 	line-height: 180%;
@@ -26,6 +27,8 @@ body {
 .container {
 	width: 1024px;
 	margin: 0 auto;
+	
+
 }
 
 h1{
@@ -37,7 +40,7 @@ h1{
 #main-bio{
 		float: left;
 		width: 200px;
-		border: 10px solid gray;
+		border-style: solid;
 		padding: 25px;
 		margin: 25px;
 	
@@ -47,7 +50,7 @@ h1{
 		border: 6px solid gray;
 		float: right;
 		margin: auto;
-		
+
 }
 
 .me{
