--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -54,8 +54,11 @@ h4{
 
 }
 
-.connect-with-me{
+aside{
 
-		float: left;
-			
-}
+		width: 40%;
+		clear: both;
+		float: right;
+		margin: auto;
+		display: block;
+}		
